# aiven_take_home_project

./: Home_Assigment_Aiven_Backend_Developer_Python.txt  README.md  consumer.py  example.sql  initialize.py  producer.py  pyproject.toml  requirements.txt  run  schema.sql  url_regex.json  utils.py
tests/: test_end_to_end.py
